# simple_nn

./: README.md  onnx2trt.sh  torch2onnx.py
infer/: CMakeLists.txt  package.xml
infer/include/: simple_nn.h
infer/src/: simple_nn.cpp
models/: simple_nn.engine  simple_nn.onnx  simple_nn.pt
train/: model.py  train.py
